[metadata]
name = kdbx-1pif-importer
version = 0.0.5

long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
summary = Import 1Password exported .1pif into KeePass.
license_file = COPYING.gplv3

author = Bheesham Persaud
author_email = me@bheesham.com

keywords = 1password keepass pykeepass
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
zip_safe = True
packages =
    kdbx_1pif_importer
python_requires = >=3.6
install_requires =
    pykeepass

[options.entry_points]
console_scripts =
    kdbx-1pif-importer = kdbx_1pif_importer:main

[sdist]
formats = zip
